# GhostText-Any

./: .idanarye.omnipytent.3.py  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  just-a-textbox.html
contrib/: gtany.service  gtany.socket
src/: debounce.rs  http_server.rs  lib.rs  main.rs  options.rs  run_editor.rs  server.rs  settings.rs  systemd.rs  utils.rs  ws_messages.rs  ws_server.rs
src/server/: editor.rs  file.rs  msg.rs  systemd.rs  text.rs  watch_changes.rs
