[package]
authors = ["Evan Lloyd New-Schmidt <evan@new-schmidt.com>"]
description = "A GhostText server for any $EDITOR"
edition = "2021"
license = "MIT"
name = "ghosttext-any"
repository = "https://github.com/newsch/ghosttext-any/"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "gtany"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.38"
clap = { version = "3.2.6", features = ["derive", "env"] }
env_logger = "0.8.2"
futures = "0.3.12"
inotify = "0.9.2"
log = "0.4.14"
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.62"
shell-words = "1.0.0"
tempdir = "0.3.7"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread", "fs", "process", "time"] }
tokio-stream = { version = "0.1.9", features = ["net"] }
warp = "0.3.0"

[dev-dependencies]
test-case = "2.1.0"
test-log = "0.2.8"

[features]
