[package]
authors = ["Evan Lloyd New-Schmidt <evan@new-schmidt.com>"]
description = "A GhostText server for any $EDITOR"
edition = "2021"
license = "MIT"
name = "ghosttext-any"
repository = "https://github.com/newsch/ghosttext-any/"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "gtany"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.1.13", features = ["derive", "env"] }
env_logger = "0.10.0"
futures = "0.3.27"
log = "0.4.17"
notify = { version = "5.1.0", optional = true }
pin-project = "1.0.12"
serde = "1.0.158"
serde_derive = "1.0.158"
serde_json = "1.0.94"
sha2 = "0.10.6"
shell-words = "1.1.0"
systemd-journal-logger = { version = "0.7.0", optional = true }
tempdir = "0.3.7"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread", "fs", "process", "time", "rt", "sync"] }
tokio-stream = { version = "0.1.12", features = ["net", "time"] }
url = "2.4.0"
warp = "0.3.3"

[dev-dependencies]
test-case = "3.0.0"
test-log = "0.2.11"

[features]
default = ["watch_changes"]
# watch file for changes and update browser on edits
# may not work well on all platforms
watch_changes = ["dep:notify"]
# listen on socket passed by systemd
systemd = ["dep:systemd-journal-logger"]
